<resources>
    <string name="app_name">Library Management</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="eg_01_12_2023">Eg : 01-12-2023</string>
    <string name="eg_coimbatore">Eg : Coimbatore</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="register">Register</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="login1"><u>Login</u></string>
    <string name="register1"><u>Register</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="_98765_43210">98765 43210</string>
    <string name="view_books">View Books</string>
    <string name="add_new_book">Add new Book</string>
    <string name="request_book">Request Book</string>
    <string name="search_book">Search Book</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="book_name">Book Name</string>
    <string name="category">Category</string>
    <string name="author">Author</string>
    <string name="author_name">Author name</string>
    <string name="description">Description</string>
    <string name="description1">Description :</string>
    <string name="submit">Submit</string>
    <string name="there_is_no_books_available_in_your_library">There is no books available in your library</string>
    <string name="type_feedback_here">Type feedback here…</string>
    <string name="search_here">Search here…</string>
    <string name="the_book_you_are_looking_for_is_not_there">The book you are looking for is not there</string>
    <string name="submit_request">Submit Request</string>
    <string name="something_gmail_com">something@gmail.com</string>
    <string name="book_name1">Book Name :</string>
    <string name="category1">Category :</string>
    <string name="author1">Author :</string>
    <string name="request">Request</string>
    <string name="hello">Hello</string>
    <string name="home_content">Library management system helps to provide information on any book present in the library to the user.</string>
    <string name="library_management_system">Library Management System</string>
    <string name="search_your_book_here">Search your book here...</string>
    <string name="view_request">View Request</string>
    <string name="view_feedback">View Feedback</string>
    <string name="there_is_no_feedback">There is no feedback</string>
    <string name="username1">Username :</string>
    <string name="feedback1">Feedback :</string>
    <string name="there_is_no_book_request">There is no book request</string>
    <string name="status">Status</string>
    <string name="select_book">Select Book</string>
    <string name="return_date">Return date</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="select">Select</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="year_of_publication">Year of Publication :</string>
    <string name="book_id">Book Id</string>
</resources>