<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginEnd="@dimen/sp_16"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/sp_16"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_12"
            android:layout_marginEnd="@dimen/sp_16"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/enter_your_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/sp_12"
                android:paddingBottom="@dimen/sp_8"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_16"
            android:layout_marginTop="@dimen/sp_20"
            android:layout_marginEnd="@dimen/sp_16"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/user_name_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sp_12"
            android:layout_marginEnd="@dimen/sp_16"
            app:endIconDrawable="@drawable/custom_password_eye"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/enter_your_password"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/sp_12"
                android:paddingBottom="@dimen/sp_8"
                android:textSize="@dimen/sp_14" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_set_password"
            style="@style/button_style"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/button_background"
            android:text="@string/set_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>