<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/application_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/green"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="@dimen/sp_16"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_12"
                android:text="@string/select_book"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize">

            <TextView
                android:id="@+id/tv_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_16"
                android:layout_marginTop="@dimen/sp_20"
                android:layout_marginEnd="@dimen/sp_16"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_books"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/sp_16"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/dp_0"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_0"
                app:layout_constraintTop_toBottomOf="@id/tv_book_name">

                <Spinner
                    android:id="@+id/spinner_book_names"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:textSize="@dimen/sp_8" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_return_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sp_16"
                android:layout_marginTop="@dimen/sp_10"
                android:layout_marginEnd="@dimen/sp_16"
                android:text="@string/return_date"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/card_books" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/sp_16"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/sp_16"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/dp_0"
                app:cardCornerRadius="@dimen/dp_5"
                app:cardElevation="@dimen/dp_0"
                app:layout_constraintTop_toBottomOf="@id/tv_return_date">

                <EditText
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:focusable="false"
                    android:paddingStart="@dimen/sp_10"
                    android:paddingEnd="@dimen/sp_10"
                    android:hint="@string/dd_mm_yyyy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_select"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/sp_20"
                android:background="@drawable/button_background"
                android:text="@string/select"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>