<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/application_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sp_16"
        android:layout_marginTop="@dimen/sp_10"
        android:layout_marginEnd="@dimen/sp_16"
        android:layout_marginBottom="@dimen/dp_5"
        android:elevation="@dimen/dp_0"
        app:cardCornerRadius="@dimen/sp_10"
        app:cardElevation="@dimen/dp_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/sp_10">

            <LinearLayout
                android:id="@+id/linear_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sp_10"
                    android:layout_weight="1"
                    android:textColor="@color/green"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sp_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/book_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/sp_10"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/sp_10"
                android:background="@drawable/button_background"
                android:text="@string/status"
                android:id="@+id/btn_status"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>